# pyxu_xrt

./: .pre-commit-config.yaml  LICENSE  README.rst  pyproject.toml  tox.ini
.pyxu-fair/: DESCRIPTION.md  config.yml
dev/: known_issues.rst  todo.txt
doc/: conf.py  index.rst  nitpick-exceptions  references.rst
doc/_static/css/: custom.css
doc/_templates/: navbar-version.html  sphinx_chatgpt.html
doc/api/: index.rst  operator.rst
doc/examples/: index.rst  placeholder.ipynb
src/pyxu_xrt/: __init__.py
src/pyxu_xrt/operator/: __init__.py
src/pyxu_xrt/operator/linop/: _drjit.py  ray.py
src/pyxu_xrt_tests/operator/: test_ray.py  test_rayxrt.py
